Merge from trunk
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/commons/branches/commons-2_0_1@1681698 13f79535-47bb-0310-9956-ffa450edef68